k8s/local/timeline-local-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-service
  labels:
    app: timeline-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeline-service
  template:
    metadata:
      labels:
        app: timeline-service
    spec:
      containers:
        - name: timeline-service
          image: us-central1-docker.pkg.dev/proven-solstice-371106/cardinalis/timeline-service
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: tweet-service
  labels:
    app: timeline-service
    spring-boot: "true"
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: timeline-service
  type: NodePort
